--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -9,6 +9,7 @@
 
     <RelativeLayout
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -30,7 +31,6 @@
             android:textSize="65sp"
             android:textColor="@color/white"
             android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
