--- a/app/src/main/res/layout/list_group_item.xml
+++ b/app/src/main/res/layout/list_group_item.xml
@@ -2,8 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
+    android:layout_marginTop="7dp"
+    android:layout_marginBottom="7dp"
     android:padding="10dp"
+    android:gravity="center"
     android:weightSum="10"
     android:orientation="horizontal">
 
@@ -11,7 +14,9 @@
         android:id="@+id/headeritem"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:paddingLeft="?android:expandableListPreferredChildPaddingLeft"
+        android:layout_gravity="center"
+        android:text="Blah blah"
+        android:layout_marginLeft="7dp"
         android:layout_width="0dp"
         android:layout_weight="8"
         android:layout_height="wrap_content" />
