--- a/app/src/main/res/layout/activity_purchase_course_detail_2.xml
+++ b/app/src/main/res/layout/activity_purchase_course_detail_2.xml
@@ -59,138 +59,30 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/course_details_card"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <include layout="@layout/course_description_card"/>
+            <include
+                android:id="@+id/description_card"
+                layout="@layout/course_description_card"/>
 
-            <!--<android.support.design.card.MaterialCardView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--app:cardElevation="8dp"-->
-                <!--app:cardUseCompatPadding="true">-->
-                <!--<LinearLayout-->
-                    <!--android:layout_marginTop="10dp"-->
-                    <!--android:orientation="vertical"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content">-->
-
-                    <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:orientation="horizontal"-->
-                        <!--android:id="@+id/layout_price"-->
-                        <!--android:layout_height="wrap_content">-->
-
-                        <!--<TextView-->
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_weight="7"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:textStyle="bold"-->
-                            <!--android:textSize="20sp"-->
-                            <!--android:id="@+id/course_price"-->
-                            <!--android:padding="12dp"-->
-                            <!--android:text="₹1000"-->
-                            <!--android:textColor="@color/colorPrimary"-->
-                            <!--/>-->
-
-
-                        <!--<TextView-->
-                            <!--android:layout_weight="6"-->
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:textStyle="bold"-->
-                            <!--android:textSize="16sp"-->
-                            <!--android:drawableLeft="@drawable/ic_presentation"-->
-                            <!--android:id="@+id/pb_instructor"-->
-                            <!--android:text=" By CareerAnna"-->
-                            <!--android:textColor="@color/colorPrimary"-->
-                            <!--/>-->
-
-                    <!--</LinearLayout>-->
-
-                    <!--<RelativeLayout-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content">-->
-
-                    <!--<ImageView-->
-                        <!--android:layout_marginLeft="5dp"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:id="@+id/star1"-->
-                        <!--android:src="@drawable/ic_star_black_24dp" />-->
-                    <!--<ImageView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:id="@+id/star2"-->
-                        <!--android:layout_toRightOf="@id/star1"-->
-                        <!--android:src="@drawable/ic_star_black_24dp"/>-->
-                    <!--<ImageView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:id="@+id/star3"-->
-                        <!--android:layout_toRightOf="@id/star2"-->
-                        <!--android:src="@drawable/ic_star_black_24dp" />-->
-                    <!--<ImageView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:id="@+id/star4"-->
-                        <!--android:layout_toRightOf="@id/star3"-->
-                        <!--android:src="@drawable/ic_star_half_black_24dp"/>-->
-                    <!--<ImageView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:id="@+id/star5"-->
-                        <!--android:layout_toRightOf="@id/star4"-->
-                        <!--android:src="@drawable/ic_star_border_black_24dp"/>-->
-
-                        <!--<TextView-->
-                            <!--android:layout_toRightOf="@id/star5"-->
-                            <!--android:layout_width="wrap_content"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:textStyle="bold"-->
-                            <!--android:textSize="16sp"-->
-                            <!--android:layout_marginLeft="10dp"-->
-                            <!--android:id="@+id/ratings"-->
-                            <!--android:text="5 (100)"-->
-                            <!--android:textColor="@color/colorPrimary"-->
-                            <!--/>-->
-                <!--</RelativeLayout>-->
-
-                    <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:textStyle="bold"-->
-                        <!--android:textSize="16sp"-->
-                        <!--android:drawableLeft="@drawable/ic_person_color"-->
-                        <!--android:id="@+id/learners"-->
-                        <!--android:layout_marginTop="8dp"-->
-                        <!--android:padding="12dp"-->
-                        <!--android:text="Learner Count : 200"-->
-                        <!--android:textColor="@color/colorPrimary"-->
-                        <!--/>-->
-                <!--</LinearLayout>-->
-
-            <!--</android.support.design.card.MaterialCardView>-->
-
-            <ExpandableListView
+            <com.careeranna.careeranna.misc.ExpandableListViewForNestedScroll
                 android:id="@+id/purchaseCourse_expandableUnit"
-                app:layout_anchor="@id/course_details_card"
-                app:layout_anchorGravity="bottom|right"
-                android:groupIndicator="@null"
                 android:layout_width="match_parent"
-                android:layout_height="2000dp"
-                android:layout_below="@+id/videoView"
+                android:layout_height="500dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/list_item_shadow"
-                android:orientation="horizontal" />
+                android:orientation="vertical" />
 
         </LinearLayout>
 
+
+
     </android.support.v4.widget.NestedScrollView>
+
 
 </android.support.design.widget.CoordinatorLayout>
