--- a/app/src/main/res/layout/fragment_my_course.xml
+++ b/app/src/main/res/layout/fragment_my_course.xml
@@ -43,6 +43,18 @@
 
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.SearchView
+            android:textSize="14sp"
+        android:paddingRight="10dp"
+            app:queryHint="Search Your Course"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:id="@+id/search"
+        android:layout_marginTop="10dp"
+        android:layout_height="30dp" />
+
         <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
             android:layout_width="match_parent"
             android:layout_marginTop="5dp"
@@ -51,6 +63,7 @@
             android:layout_height="match_parent"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
+            android:layout_below="@+id/search"
             app:rvp_triggerOffset="0.6"
             app:rvp_singlePageFling="true"
             android:clipToPadding="false"
