--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:id="@+id/layout"
     android:layout_height="match_parent"
-    tools:context=".CartPage">
+    tools:context=".MyCourses">
 
 
     <android.support.v7.widget.CardView
