--- a/app/src/main/res/layout/activity_my_couses.xml
+++ b/app/src/main/res/layout/activity_my_couses.xml
@@ -52,8 +52,7 @@
         app:itemTextColor="@color/white"
         app:itemIconTint="@color/white"
         android:background="@color/colorPrimary"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/my_courses">
+        android:fitsSystemWindows="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
