--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:id="@+id/layout"
-        android:layout_height="match_parent"
-        tools:context=".CartPage">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
