Changes Folder Of Activity

--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     android:id="@+id/layout"
-    tools:context=".PasswordReset">
+    tools:context=".activity.PasswordReset">
 
     <EditText
         android:layout_marginTop="40dp"
