--- a/app/src/main/res/layout/activity_new_course.xml
+++ b/app/src/main/res/layout/activity_new_course.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawelayout"
-    tools:context=".MyCourses">
+    tools:context=".activity.MyCourses">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
