--- a/app/src/main/res/layout/activity_paytm_payment.xml
+++ b/app/src/main/res/layout/activity_paytm_payment.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PaytmPayment">
+    tools:context=".activity.PaytmPayment">
 
 </android.support.constraint.ConstraintLayout>
