--- a/app/src/main/res/layout/activity_purchase_course_detail_2.xml
+++ b/app/src/main/res/layout/activity_purchase_course_detail_2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/coordinator"
     android:layout_height="match_parent"
-    tools:context=".PurchaseCourseDetail">
+    tools:context=".activity.PurchaseCourseDetail">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
