--- a/app/src/main/res/layout/activity_video_with_comment.xml
+++ b/app/src/main/res/layout/activity_video_with_comment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".VideoWithComment">
+    tools:context=".activity.VideoWithComment">
 
     <com.longtailvideo.jwplayer.JWPlayerView
         android:id="@+id/videoView"
