--- a/app/src/main/res/layout/activity_whis_list.xml
+++ b/app/src/main/res/layout/activity_whis_list.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".VideoWithComment">
+    tools:context=".activity.VideoWithComment">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:id="@+id/layout"
         android:layout_height="match_parent"
-        tools:context=".MyCourses">
+        tools:context=".activity.MyCourses">
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
