--- a/app/src/main/res/layout/activity_my_courses.xml
+++ b/app/src/main/res/layout/activity_my_courses.xml
@@ -7,12 +7,14 @@
     android:layout_height="match_parent"
     android:id="@+id/drawelayout"
     tools:context=".activity.MyCourses">
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal"
             android:id="@+id/pager"
             >
@@ -26,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/sliderDots"
+                android:layout_marginTop="110dp"
                 android:gravity="center_vertical|center_horizontal"
                 android:orientation="horizontal" >
             </LinearLayout>
@@ -33,12 +36,13 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="7"
             android:id="@+id/main_content"
-            android:layout_below="@id/pager">
+            >
         </FrameLayout>
 
-    </RelativeLayout>
+    </LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:padding="0dp"
@@ -56,15 +60,14 @@
             android:orientation="vertical">
 
             <include layout="@layout/header"
-                android:id="@+id/header"/>
+                android:id="@+id/header_header"/>
 
             <ListView
                 android:id="@+id/list_menu_items"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/white"
-                android:dividerHeight="1dp"/>
+                android:background="@color/white"/>
         </LinearLayout>
 
     </android.support.design.widget.NavigationView>
