--- a/app/src/main/res/layout/fragment_whis_list_fragement.xml
+++ b/app/src/main/res/layout/fragment_whis_list_fragement.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".">
+    tools:context=".activity.WhisListFragement"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Soory You Don't Have Purchase Any Course Please Add Some"
+                    android:text="@string/no_course_added"
                     />
 
                 <ImageView
