--- a/app/src/main/res/layout/item_article_2.xml
+++ b/app/src/main/res/layout/item_article_2.xml
@@ -61,10 +61,12 @@
 
                 <TextView
                     android:id="@+id/article_author_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="Author Name"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:textSize="12sp"
                     android:layout_gravity="center"
                     />
@@ -108,7 +110,8 @@
             android:id="@+id/article_content"
             android:text="@string/sample_article_content"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
+            android:paddingBottom="7dp"
             />
     </LinearLayout>
 
